src/core-crm/objects/Communication_Processed__e/Communication_Processed__e.object-meta.xml
<CustomObject>
    <description>Event published when the Communication Queue finish processing a Communication Queue record and the Status is Sent or Failed</description>
    <label>Communication Processed</label>
    <pluralLabel>Communications Processed</pluralLabel>
</CustomObject>