src/core-crm/objects/Communication_Processed__e/fields/Business_Process__c.field-meta.xml
<CustomField>
    <fullName>Business_Process__c</fullName>
    <description>Business Process of the corresponding Communication Queue record generating the event</description>
    <label>Business Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>