src/core-crm/objects/Communication_Processed__e/fields/Communication_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Communication_Queue_Id__c</fullName>
    <description>Id of the Communication Queue record generating the event</description>
    <label>Communication Queue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>