src/core-crm/objects/Communication_Processed__e/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was the Communication Queue record processed successfully</description>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>