src/core-crm/objects/Communication_Processed__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of the corresponding Communication Queue record generating the event</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>