src/core-crm/objects/Communication_Processed__e/fields/What_Id__c.field-meta.xml
<CustomField>
    <fullName>What_Id__c</fullName>
    <description>What Id of the corresponding Communication Queue record generating the event</description>
    <label>What Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>